fixing responsive layout issues.....

--- a/css/agency.css
+++ b/css/agency.css
@@ -844,5 +844,5 @@ i.modals.fab.fa-github {
   position: absolute;
   min-width: 100vw;
   left: 0;
-  bottom: -6%;
+  bottom: -20%;
 }
